@@ -20861,6 +20861,17 @@
     },
 	
 	{
+        "path": "track/maurer/preview_track.png",
+        "x_offset": 9,
+        "y_offset": 3
+	},
+    {
+        "path": "track/maurer/preview_support.png",
+        "x_offset": 24,
+        "y_offset": 13
+	
+    },
+	{
         "path": "track/maurer/flat_1.png",
         "x_offset": -22,
         "y_offset": -4,
