@@ -604,7 +604,7 @@ enum
     RIDE_TYPE_SINGLE_RAIL_ROLLER_COASTER,
     RIDE_TYPE_ALPINE_COASTER,
     RIDE_TYPE_CLASSIC_WOODEN_ROLLER_COASTER,
-    RIDE_TYPE_T_REX_ROLLER_COASTER,
+    RIDE_TYPE_MAURER_ROLLER_COASTER,
 
     RIDE_TYPE_COUNT
 };
