@@ -1424,7 +1424,9 @@ enum
     SPR_G2_ALPINE_LIFT_TRACK_GENTLE_DIAGONAL = SPR_G2_ALPINE_LIFT_TRACK_FLAT_DIAGONAL + 4,
     SPR_G2_ALPINE_END = SPR_G2_ALPINE_LIFT_TRACK_GENTLE_DIAGONAL + 12,
 
-    SPR_G2_MAURER_BEGIN = SPR_G2_ALPINE_END,
+    SPR_RIDE_DESIGN_PREVIEW_MAURER_ROLLER_COASTER_TRACK = SPR_G2_ALPINE_END,
+    SPR_RIDE_DESIGN_PREVIEW_MAURER_ROLLER_COASTER_SUPPORTS = SPR_RIDE_DESIGN_PREVIEW_MAURER_ROLLER_COASTER_TRACK + 1,
+    SPR_G2_MAURER_BEGIN = SPR_RIDE_DESIGN_PREVIEW_MAURER_ROLLER_COASTER_TRACK + 2,
     SPR_G2_MAURER_TRACK_FLAT = SPR_G2_MAURER_BEGIN,
     SPR_G2_MAURER_TRACK_BRAKE = SPR_G2_MAURER_TRACK_FLAT + 2,
     SPR_G2_MAURER_TRACK_BLOCK_BRAKE = SPR_G2_MAURER_TRACK_BRAKE + 2,
